# RetroSpyServerCXX

./: .gitignore  .gitmodules  CMakeLists.txt  Example.ini  README.MD  RetroSpy-Server.sln  RetroSpy.SQL  RetroSpy.db
RetroSpy/: CMakeLists.txt  Config.cpp  Database.cpp  Database.h  INIReader.cpp  INIReader.h  Main.cpp  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  RConfig.cpp  RConfig.h  RetroSpy.rc  RetroSpy.vcproj  resource.h
common/: CMakeLists.txt  Common.rc  Defines.h  DllApi.h  Helper.cpp  Helper.h  Helper_Base64.cpp  Helper_Query.cpp  Helper_Random.cpp  Loop.cpp  Loop.h  ModuleDef.h  Query.cpp  Query.h  RSString.cpp  RSString.h  Server.cpp  Server.h  StringServer.cpp  StringServer.h  TemplateStringServer.cpp  TemplateStringServer.h  chc_endian.cpp  chc_endian.h  common.vcproj  md5.c  resource.h  w_stdint.h
libuv_project/: libuv.vcproj
natneg/: CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  NNServer.cpp  NNServer.h  NNTypes.h  NatNeg.cpp
peerchat/: CMakeLists.txt  Cache.cpp  Cache.h  IRCChannel.cpp  IRCChannel.h  IRCClient.cpp  IRCClient.h  PeerChatServer.cpp  PeerChatServer.h  Structs.h
playersearch/: CMakeLists.txt  PSServer.cpp  PSServer.h  PlayerSearch.cpp  PlayerSearch.def  playersearch.vcproj
playerspy/: CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  PYServer.cpp  PYServer.h  PlayerSpy.cpp  PlayerSpy.def  Types.h  playerspy.vcproj
queryreport2/: CMakeLists.txt  QR2Server.cpp  QR2Server.h  QueryReport2.cpp
